Fix deprecations from move to Java 11